--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
     <meta name="theme-color" content="#000000" />
 
     <link rel="apple-touch-icon" href="/favicon.png" />
-    <meta name="description" content="React eCommerce Admin Dashboard" />
+    <meta name="description" content="Admin Dashboard" />
     <meta
       property="og:title"
-      content="Kachabazar - React eCommerce Admin Dashboard"
+      content="Air Expert India"
     />
     <meta property="og:type" content="eCommerce Website" />
-    <meta property="og:url" content="https://kachabazar-admin.vercel.app" />
+    <meta property="og:url" content="https://air_Expert_india-admin.vercel.app" />
     <meta
       property="og:image"
       content="https://res.cloudinary.com/ahossain/image/upload/v1636572997/kachabazar-admin_ijlexj.png"
@@ -25,7 +25,7 @@
       href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap"
       rel="stylesheet"
     />
-    <title>Kachabazar | React eCommerce Admin Dashboard</title>
+    <title>Air Expert India | Admin</title>
   </head>
   <body class="antialiased">
     <noscript>You need to enable JavaScript to run this app.</noscript>
